--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
               <h4 class="h4 timeline-item-title">Rashid Minhas Higher Secondary School Alipur(Inter)</h4>
 
-              <span>2006 — 2007</span>
+              <span>2021-2023</span>
 
             </li>
 
@@ -359,7 +359,7 @@
 
               <h4 class="h4 timeline-item-title">Asif Saleem Higher Secondary School Alipur(Matric)</h4>
 
-              <span>2002 — 2004</span>
+              <span>2019- 2021</span>
 
             </li>
 
